fix(Gui Transversal): #975 Fixed bug that make syntax coloration not possible on firefox

--- a/source/src/main/webapp/css/default.css
+++ b/source/src/main/webapp/css/default.css
@@ -565,14 +565,14 @@ div.ImportedStepAction{
     border-width:thin ;
     border-color:#CCCCCC;
 }
- 
+
 
 input.readonlyaction_seq, input.readonlyactioncontrol_seq{
     width: 40px; 
     font-weight: bold; 
     background-color: transparent; 
     height:100%; color:grey;
-    
+
 }
 
 div.StepUseStepLinkDiv{
@@ -624,4 +624,12 @@ img.selectedPicture{
     color:#000;
     border-radius:0;
     font-weight: normal;
+}
+
+#envelope:focus { outline: 0px solid transparent; }
+
+.highlightedContainer {
+    border-color: #66afe9;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(102, 175, 233, 0.6);
+    outline: 0 none;
 }
